2008-03-30  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsoleRunner.cs: Fix default value for 'rule_set' so that the 
	--set command line option does not need to be specified (in this 
	case the rule set "default" will be used).
	* Settings.cs: If not specified look for the "rules.xml" file that
	resides with the runner.

2008-03-15  Sebastien Pouliot  <sebastien@ximian.com> 

	* Options.cs: Update to version 0.2.0
	* HtmlResultWriter.cs: Try harder to find the XSLT in the assembly 
	resource files.

2008-03-04  Sebastien Pouliot  <sebastien@ximian.com>

	* HtmlResultWriter.cs, ResultWriter.cs, TextResultWriter.cs,
	XmlResultWriter.cs: Rework IDisposable to reduce duplication.

2008-02-17  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsoleRunner.cs: Split with Settings and add support for ignoring
	defects based on a user supplied list.
	* IgnoreFileList.cs: New. File-based ignore list.
	* Settings.cs: New. Configuration support for runner.
	* console.mdp: Update MonoDevelop project file.
	* Makefile.am: Update build file.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com> 

	* ConsoleRunner.cs: Handle no arguments. Show correct timing for
	each assembly being processed.
	* XmlResultWriter.cs: Call Dispose (not Close).

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com> 

	* ConsoleRunner.cs: Updated runner for the new framework (still a 
	work in progress).
	* gendarme.xsl: Updated XSLT to match new XML format.
	* HtmlResultWriter.cs: Produce HTML reports using gendarme.xsl and
	the XML writer.
	* Makefile.am: Updated with changes.
	* Options.cs: Jonathan Pryor Getopt::Long-inspired option parsing 
	library for C#
	* ResultWriter.cs: Renamed from IResultWriter. Now an abstract class.
	* TextResultWriter.cs: Updated for display more information.
	* XmlResultWriter.cs: Updated xml format for results.

2008-02-03  Sebastien Pouliot  <sebastien@ximian.com> 

	* gendarme.xsl: Display the correct message (not the first one) for
	each location.
